# outcrop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  justfile
.github/workflows/: ci.yml  release.yml
.playwright-cli/: page-2026-06-10T01-26-25-198Z.yml  page-2026-06-10T01-32-33-626Z.yml  page-2026-06-10T01-33-18-828Z.yml  page-2026-06-10T01-33-37-228Z.yml  page-2026-06-10T01-33-56-081Z.yml  page-2026-06-10T01-33-58-019Z.yml
scripts/: smoke.sh
src/: assets.rs  cache.rs  config.rs  convert.rs  demo.rs  diff.rs  discovery.rs  dto.rs  error.rs  garbage.rs  main.rs  registry.rs  state.rs  summary.rs  warnings.rs
src/routes/: activity.rs  checkpoints.rs  compactions.rs  dbs.rs  garbage.rs  lsm.rs  manifests.rs  metrics.rs  mod.rs  openapi.rs  overview.rs  search.rs  ssts.rs  wal.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: CompactionJobs.tsx  GarbagePanel.tsx  HelpTip.tsx  JsonTree.tsx  KeyDisplay.tsx  LsmTreeViz.tsx  Panel.tsx  QueryGate.tsx  RefreshTimer.tsx  SearchBar.tsx  SstDetailDrawer.tsx  StatusBadge.tsx  WalSstDrawer.tsx
web/src/lib/: dbroute.ts  escape.ts  feed.ts  format.ts  narrative.ts  ulid.ts
web/src/pages/: Activity.tsx  Alerts.tsx  Checkpoints.tsx  CompactionJob.tsx  Compactions.tsx  CompactionsDiff.tsx  CompactionsVersion.tsx  Fleet.tsx  Garbage.tsx  Lsm.tsx  ManifestDetail.tsx  ManifestDiff.tsx  Manifests.tsx  Overview.tsx  Wal.tsx
